# GrailGUI

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  BlockLoaders.md  CMakeLists.txt  Dockerfile  Grail.md  Grail_Workspace.code-workspace  Makefile  README.md  TODO.md  Windows_Instructions.md  build.py  build.sh  configure.sh  contributors.txt  docker-compose.yml  grailteeshirt.txt  testMultiTab.cc  todo.md
src/: .gitignore  .gitignore.orig  CMakeLists.txt  README
src/CAD/: BezierPath.cc  BezierPath.hh  CMakeLists.txt  Circle.cc  Circle.hh  Circle2D.cc  Circle2D.hh  Curve.cc  Curve.hh  Cylinder.cc  Cylinder.hh  Extrusion.cc  Extrusion.hh  Facet.cc  Facet.hh  Gear.cc  Gear.hh  Gear2.cc  Gear2.hh  Group.cc  Group.hh  Helix.cc  Helix.hh  Intersection.hh  Line.cc  Line.hh  LinearExtrude.cc  LinearExtrude.hh  Main.cc  NewCylinder.cc  NewCylinder.hh  Prism.hh  Rectangle.cc  Rectangle.hh  RectangularPrism.cc  RectangularPrism.hh  Shape3D.cc  Shape3D.hh  Sphere.cc  Sphere.hh  (+14 more)
src/audio/: AudioPlayer.cc  AudioPlayer.hh  CMakeLists.txt  Makefile  VideoPlayer.cc  VideoPlayer.hh  playSound.cc
src/csp/: BenchmarkCSPClient.cc  CMakeLists.txt  CSPClient.cc  CSPClient.hh  CSPConfig.cc  CSPConfig.hh  CSPPlatImports.hh  CSPRequest.cc  CSPRequest.hh  CSPServlet.hh  Client.hh  CollaborateConnectionServer.cc  CollaborateServer.cc  Combiner.hh  FormServlet.hh  GenericXDLClient.cc  GraphicalXDLClient.cc  HTTPRequest.cc  HTTPRequest.hh  HTTPSRequest.cc  Hash.cc  Hash.hh  HttpServlet.cc  HttpServlet.hh  IPV4Socket.cc  IPV4Socket.hh  Insertion.hh  Makefile  MultiThreadHttpHandler.hh  Page.cc  Page.hh  PageBuffer.hh  Request.cc  Request.hh  Server.hh  Servlet.cc  Servlet.hh  ServletMap.hh  SimpleCSPClient.cc  SimpleCSPServer.cc  (+21 more)
src/data/: BlockLoader.cc  BlockLoader.hh  BlockLoader2.cc  BlockLoader2.hh  BlockMapLoader.cc  BlockMapLoader.hh  BlockMapLoader2.cc  BlockMapLoader2.hh  BlockMapLoaderConverters.cc  BlockMapLoaderConverters2.cc  BoundRect.hh  CMakeLists.txt  Dataset.hh  GapMinderBinaryDB.cc  GapMinderBinaryDB.hh  GapMinderExtra.cc  GapMinderExtra.hh  GapMinderLoader.cc  GapMinderLoader.hh  GapMinder_dataFormat.txt  loadESRIShapefile.cc  log
src/maps/: CMakeLists.txt  Geometry.cc  Geometry.hh  MapNames.hh  MapView2D.cc  MapView2D.hh  MapViewer.cc  MapViewer.hh
src/opengl/: AngledMultiText.cc  AngledMultiText.hh  Animated.cc  Animated.hh  AutoNavBar.cc  AutoNavBar.hh  AxisWidget.cc  AxisWidget.hh  BarChartWidget.cc  BarChartWidget.hh  Bezier.hh  BlastMapLoader.hh  BlockLoader.hh  BlockMapLoader.cc  BlockMapLoader.hh  BlockMapLoaderConverters.cc  BoxChartWidget.cc  BoxChartWidget.hh  ButtonWidget.cc  ButtonWidget.hh  CMakeLists.txt  CMakeLists.txt.bak  CalendarWidget.cc  CalendarWidget.hh  CandlestickChartWidget.cc  CandlestickChartWidget.hh  Canvas.cc  Canvas.hh  ChessBoardUtil.hh  Circle.hh  ColorGrid.cc  ColorGrid.hh  Colors.cc  Colors.hh  CubicFunc.hh  Cursor.cc  Cursor.hh  DocView.cc  DocView.hh  Document.cc  (+121 more)
src/parser/: Makefile  SimpleGrailParser.java  grail.g4  grail2.g4  simple_grail.g4  simple_grailTagsImpl.java  test.g4  test1.grail
src/repo/: CMakeLists.txt  GrailRepository.cc  Makefile  README.md  Repository.cc  Repository.hh  keygen.cc  template.cc  template.hh  testrepo.cc
src/util/: BLHashMap.cc  BLHashMap.hh  Benchmark.cc  Benchmark.hh  BinBuffer.hh  Buffer.cc  Buffer.hh  CMakeLists.txt  CSVParser.cc  CSVParser.hh  CString.hh  Callbacks.cc  Callbacks.hh  Config.cc  Config.hh  Date.cc  Date.hh  DynArray.hh  Ex.hh  FileUtil.hh  HashMap.cc  HashMap.hh  HighPerfMemAlloc.hh  HttpClientTester.cc  JulianDate.cc  JulianDate.hh  List1.hh  Log.cc  Log.hh  Makefile  MetaData.hh  PlatFlags.hh  Prefs.cc  Prefs.hh  RCString.cc  RCString.hh  Stack.hh  Stats.cc  Stats.hh  TestFormatting.cc  (+15 more)
src/video/: CMakeLists.txt  VideoPlayer.cc  VideoPlayer.hh  webcamcapture  webcamcapture2_linux.cpp  webcamcapture_linux.cpp
src/visualcs/: CSRGraph.hh  Graph.hh  MatrixGraph.hh  NullGraphObserver.hh
src/xdl/: BlastMapLoader.hh  CMakeLists.txt  FastFormat.cc  List.hh  Makefile  Renderer.cc  Renderer.hh  SymbolTable.cc  SymbolTable.hh  XDLArray.cc  XDLArray.hh  XDLCompiler.cc  XDLCompiler.hh  XDLDesignGoals.md  XDLRenderer.cc  XDLRenderer.hh  readUser.cc  readtest.cc  std.cc  std.hh  std.xdl  symTable.h  test.xdl  testType.cc  tryPrint.cc  writetest.cc  xdltest.cc
src/xp/: BoardGameConcepts.cc  CMakeLists.txt  Calendar.cc  Calendar.hh  Geometry.hh  Makefile  Quantile.hh  Stats.cc  Stats.hh  Tessellation.cc  aapl.txt  aapl_concept.txt  aapl_delta.txt  centroid.c  data.hex  data.txt  data.txt.lzma  decompressBlockLoader.cc  delta_stock.cpp  grailcss.css  javascriptstyle.grail  lzmadecode.cc  lzmautil.hh  notesforxdl.cc  passing_iterables.cc  serverside.cc  stats.h  stock_delta.cpp  testglm.cpp  testing.cc
test/: .gdbinit  AAPL.csv  AMC.csv  BarChart.cc  BarChart.hh  BezierTest.cc  CMakeLists.txt  Calendar.hh  Chess.txt  Chess.yourmomsfattits  CircleTest.cc  CurveTest.cc  DrawNASAEphemerisSolarSystem2d.cc  DrawSolarSystem.hh  ESRIMapDemo.cc  ExtrusionTest.cc  FacetTest.cc  GME.csv  Globe.cc  GravSim.hh  HelixTest.cc  JoeyDemo.cc  LineTest.cc  LinkedPathTest.cc  LuisaDemo.cc  Makefile  MapDemo.cc  Person.hh  QuentinDemo.cc  QuoteTable.cc  QuoteTable.hh  ShapefileDemo.cc  SolarSystem.cc  SolarSystem.txt  StockDemo.cc  TableViewer.hh  TestESRIPolygon.cc  TimeSeries.cc  binaryFile  convertASCIITable.cc  (+60 more)
test/2d/: CMakeLists.txt  JoeyDemo.cc  simpleDemo.cc  simpleDemo2.cc  simpleOutlineTest.cc  testAddRemove2.cc  testAddRemove3.cc  testAddRemoveElements.cc  testBadRectangles.cc  testChessBoard.cc  testChessGame.cc  testCompletePoly.cc  testDisplayBook.cc  testDisplayEntireBook.cc  testFillDraw.cc  testGrid.cc  testGroup.cc  testImage.cc  testImageDrag.cc  testImageMove.cc  testMultiText2.cc  testPolyLines.cc  testStyledMultishape.cc  testStyledMultishape25.cc  testTable.cc  testText.cc  testText3.cc  testTextSimple.cc  testTriangle.cc  testVisualBoard.cc
test/3d/: CMakeLists.txt  Globe.cc  Pyramid.cc  SolarSystem.cc  testDemo3D.cc  testDrawing3D.cc
test/CAD/: BezierTest.cc  HelixTest.cc  (+13 more)
(+461 files in other folders)
