
# add_grail_executable([BINNAME <binary name>] SRC <src path> LIBS <libs>)

# 2D Graphics
add_subdirectory(2d)

# 3D Graphics
add_subdirectory(3d)

# CAD
add_subdirectory(CAD)

# Graphs
add_subdirectory(graph)

# GUI
add_subdirectory(gui)

# Maps
add_subdirectory(maps)


# Media
add_subdirectory(media)

# Networking

# Solar System
add_subdirectory(solarsystem)

# Util

# XDL
add_subdirectory(xdl)

# XP (Experimental)
add_subdirectory(xp)

# Unsorted 
# add_grail_executable(SRC ../src/xp/decompressBlockLoader.cc LIBS grail lzma)
# add_grail_executable(SRC StockDemo.cc LIBS grail)






